fix: fix code block wrong background in example title

--- a/docs/.vitepress/theme/style/global.css
+++ b/docs/.vitepress/theme/style/global.css
@@ -68,3 +68,7 @@ kbd:not(.DocSearch-Button-Key) {
 .tip.custom-block > .danger.custom-block {
     background-color: #fde4e8;
 }
+
+.example-title-anchor > code {
+    background-color: rgba(0, 0, 0, 0) !important;
+}
